system/clusters/creodias/resource-management/open-science-catalog-metadata-proxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-reverse-proxy
  namespace: osc
  labels:
    app.kubernetes.io/instance: app-reverse-proxy
    app.kubernetes.io/name: app-reverse-proxy
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: app-reverse-proxy
    app.kubernetes.io/name: app-reverse-proxy
  ports:
    - name: http
      protocol: TCP
      targetPort: 80
      port: 80
