system/clusters/creodias/resource-management/open-science-catalog-metadata-proxy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-reverse-proxy
  namespace: osc
  labels:
    app.kubernetes.io/instance: app-reverse-proxy
    app.kubernetes.io/name: app-reverse-proxy
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
spec:
  tls:
    - secretName: app-mydomain-com-tls
      hosts:
        - metadata.osc.develop.eoepca.org
  rules:
  - host: metadata.osc.develop.eoepca.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-reverse-proxy
            port:
              number: 80
